# rg16032e

./: Cargo.toml  README.md  rust-analyzer.toml
.cargo/: config.toml
embedded-hal-v1/: Cargo.toml
embedded-hal-v1/src/: lib.rs
esp32/: Cargo.toml
esp32/src/: flex.rs  lib.rs  parallel.rs  serial.rs
examples/: Cargo.toml
examples/src/: cgram.rs  lib.rs  reverse.rs  scroll.rs  two_at_once.rs  verify.rs
src/: lib.rs  main.rs
st7920/: Cargo.toml
st7920/src/: bus.rs  command.rs  esp.rs  ext.rs  hal.rs  lib.rs  ll.rs  parallel.rs  serial.rs  stm32f4.rs  stm32h7.rs
st7920/src/command/: infallible.rs
st7920/src/parallel/: interface.rs
stm32f4/: Cargo.toml  Embed.toml
stm32f4/.cargo/: config.toml
stm32f4/src/: flex.rs  lib.rs  now.rs  parallel.rs  serial.rs
stm32h7/: Cargo.toml  memory.x
stm32h7/.cargo/: config.toml
stm32h7/src/: lib.rs
