[package]
name = "stm32f4"
version = "0.1.0"
authors = ["Riccardo Ripanti <riccardo.ripanti01@gmail.com>"]
edition = "2021"

[features]
parallel = [] # Not yet implemented
serial = []

two-displays = []

[[bin]]
name = "verify"
required-features = ["parallel"]

[[bin]]
name = "two_at_once"
required-features = ["two-displays"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"

[dependencies.panic-probe]
version = "0.3.1"
features = ["print-defmt"]

[dependencies.rand_mt]
version = "4.2.2"
default-features = false
features = ["rand-traits"]

[dependencies.stm32f4xx-hal]
version = "0.22.0"
features = ["stm32f401"]

[dependencies.st7920]
path = "../st7920"

[dependencies.examples]
path = "../examples"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
